2011-09-01	Petr Benes <benesp16@fel.cvut.cz>

	PR 1895/cpukit
	* rtems/src/ratemoncancel.c, rtems/src/ratemondelete.c,
	rtems/src/ratemonperiod.c, sapi/include/confdefs.h,
	score/Makefile.am, score/include/rtems/score/scheduler.h,
	score/include/rtems/score/schedulerpriority.h,
	score/include/rtems/score/schedulersimple.h,
	score/include/rtems/score/schedulersimplesmp.h,
	score/inline/rtems/score/scheduler.inl,
	score/inline/rtems/score/schedulerpriority.inl,
	score/src/coremutexseize.c: Add priority_compare and release_job
	hooks interfaces to scheduler interface.
	* score/src/schedulerpriorityprioritycompare.c,
	score/src/schedulerpriorityreleasejob.c: New files.

2011-08-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* rtems/include/rtems/rtems/tasks.h: Formatting.

2011-08-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* include/rtems/userenv.h, score/src/threadhandler.c: Formatting.
	* sapi/src/exshutdown.c: Add comments.

2011-08-22	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	PR 1876
	* score/Makefile.am, score/include/rtems/score/isr.h, score/src/isr.c,
	score/src/smp.c, score/src/smplock.c, score/src/threaddispatch.c,
	score/src/threaddispatchdisablelevel.c: Add smp isr support.
	* score/src/isrsmp.c: New file.

2011-08-21	Petr Benes <benesp16@fel.cvut.cz>

	PR 1886/cpukit
	* sapi/include/rtems/rbtree.h, sapi/inline/rtems/rbtree.inl,
	score/include/rtems/score/rbtree.h,
	score/inline/rtems/score/rbtree.inl, score/src/rbtree.c,
	score/src/rbtreeinsert.c: This patch enables inserting duplicate keys
	into rbtree. It is possible to turn on this feature when initializing
	the tree.

2011-08-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1890/cpukit
	* posix/src/mqueuerecvsupp.c: POSIX says msg_prio is allowed to be
	NULL.

2011-08-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1873/cpukit
	* score/include/rtems/score/heap.h: When using heap protection, we
	should account for adding an aligned protection footer.
