@@ -1,3 +1,10 @@
+2011-09-01	Joel Sherrill <joel.sherrilL@OARcorp.com>
+
+	PR 1895/cpukit
+	* score/src/coretodmsecstoticks.c, score/src/coretodusectoticks.c,
+	score/src/timespectoticks.c: Ensure time conversions to ticks do not
+	ignore partial tick and return 1 less than desired.
+
 2011-09-01	Petr Benes <benesp16@fel.cvut.cz>
 
 	PR 1895/cpukit
